Changes since version 2.0.0
---------------------------

- Added setDefaultContext() and getDefaultContext() to
  the Ice.Communicator interface. This allows a default context
  to be established on a communicator-wide basis. See section
  29.8.3 in the doc.

  Added ice_defaultContext to Ice.ObjectPrx. This creates a new
  proxy that uses the default context established on the communicator.

- Overloaded the checkedCast member function of the generated PrxHelper
  classes to allow a trailing argument of type ::Ice::Context. This makes
  it possible to do stateful things that require a context in a
  servant locator's activate() method.

- Added support for bzip2 protocol compression. The implementation
  uses the bzip2 classes from Ant. See the INSTALL file for more
  information.

Changes since version 1.5.1
---------------------------

- The proxy returned by the object adapter operations addFacet and
  addFacetWithUUID did not contain the facet. This required the
  application to make an extra call to ice_newFacet in order to
  obtain the correct proxy. This has been fixed.

- Added the object adapter property <name>.PublishedEndpoints, which
  specifies endpoints to advertise in proxies created by the adapter.

- Fixed a bug with AMD exception handling, where it was possible that
  certain exceptions propagate out of ice_response() or
  ice_exception(), and therefore such exceptions were not handled
  properly.

- Exceptions raised while marshaling data for batch requests resulted
  in a connection deadlock. This has been fixed.

- Fixed tracing of operation mode.

- Fixed a bug that caused marshaling failures when global metadata was
  used to define an alternate Java package. Two new properties are
  supported: Ice.Package.* and Ice.Default.Package. See the manual for
  more information.

- Fixed bug in slice2java: with the --impl-tie option, incorrect code
  was generated for local interfaces and classes.
